@@ -60,12 +60,20 @@ Max sim uploads: ${org.drftpd.commands.UserManagement@maxsimup,-13} Max sim down
 Group / Leech slots: ${org.drftpd.commands.UserManagement@groupslots} ${org.drftpd.commands.UserManagement@leechslots}\n\
 Total uploaded: ${uploaded,-14} Total downloaded: ${downloaded}\n\
 Times nuked: ${org.drftpd.commands.Nuke@nuked,-17} Bytes nuked: ${org.drftpd.commands.Nuke@nukedBytes}\n\
-Primary group: ${group}\n\
-Extra groups: ${groups}\n\
+Primary group: ${group,-15} Banned: ${isbanned}\n\
+Extra groups: ${groups,-16} Banned Until: ${org.drftpd.commands.UserManagement@ban_time}\n\
 IP masks: ${ipmasks}\n\
 Weekly Allotment: ${org.drftpd.commands.UserManagement@wkly_allotment}\n\
 IRC Ident: ${org.drftpd.commands.UserManagement@ircident,-23}\n\
 Tagline: ${org.drftpd.commands.UserManagement@tagline}
+
+bans=${username} banned for another ${timeleft}m until ${org.drftpd.commands.UserManagement@ban_time} (${org.drftpd.commands.UserManagement@ban_reason})
+help.ban=Ban a user from logging onto the site for a specified amount of time.
+help.ban.specific=SITE BAN:\n\ site ban <user> <minutes> [reason]
+help.bans=List the current users banned on the site.
+help.bans.specific=SITE BANS\n\ site bans
+help.unban=Removes a ban for the specified user.
+help.unban.specific=SITE UNBAN\n\ site unban <user>
 
 user.username=Username: ${username,-20} Created: ${created}
 user.comment=Comment: ${comment,-21} Last seen: ${lastseen}
